--- a/styles/rightBarStyles.css
+++ b/styles/rightBarStyles.css
@@ -88,7 +88,10 @@
 }
 
 .right-ui-object-name {
-    flex-grow: 1;
+    width: calc(100% - 6em);
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 #object-name:hover:not(:focus-visible):not(:disabled) ~ #object-name-label {
